--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,11 @@
   font-family: "Montserrat", sans-serif;
 }
 
+body {
+  padding-top: 160px;
+  background-color: #000;
+}
+
 a {
   text-decoration: none;
 }
